@@ -1,0 +1,7 @@
+<div>
+  <ul>
+<% for item in @items -%>
+    <li><%= item.name %></li>
+<% end -%>
+  </ul>
+</div>
