@@ -1,0 +1,2 @@
+<%= render :partial => 'item/new' %>
+<%= render :partial => 'item/list' %>
