@@ -4,6 +4,8 @@
     <li class="first"><%= link_to 'Home', home_url %></li>
     <!--li><%= link_messages %></li-->
     <!--li><%= link_to 'People', people_url %></li-->
+    <li><%= link_to 'Items', items_url %></li>
+    <li><%= link_to 'Search', search_url %></li>
     <li><%= link_to 'Sources', sources_url %></li>
   </ul>
 </div>
